src/test/contracts/negative/error_messages/type_ident_eq_lbrace_ident_colon_constr_type.religo
type z = { z: Boo type